# AudioGraph

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
docs/final_report/latex-project/: main.tex
docs/intermediate_report/: main.tex
docs/project_proposal/: main.tex
src/: CMakeLists.txt  main.cpp
src/AudioEditor/: AudioEditor.cpp  AudioEditor.h  AudioEditorSettings.h  CMakeLists.txt  GraphWindow.cpp  GraphWindow.h  ImguiWindow.cpp  ImguiWindow.h  NodeRenderer.cpp  NodeRenderer.h
src/AudioEditor/EditorNodes/: EditorNode.h  EditorNodeFactory.h  FileNode.cpp  FileNode.h  SignalGraphNode.cpp  SignalGraphNode.h
src/AudioEngine/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
src/AudioEngine/AudioNodes/: AddSignalNode.cpp  AddSignalNode.h  FloatMultiplyNode.cpp  FloatMultiplyNode.h  FloatRangeNode.cpp  FloatRangeNode.h  GeneralClickFilterNode.cpp  GeneralClickFilterNode.h  IntRangeNode.cpp  IntRangeNode.h  LineOutNode.cpp  LineOutNode.h  ReadFromWAVNode.cpp  ReadFromWAVNode.h  RealTimeGeneralClickFilterNode.cpp  RealTimeGeneralClickFilterNode.h  SawtoothOscillatorNode.cpp  SawtoothOscillatorNode.h  SimpleClickFilterNode.cpp  SimpleClickFilterNode.h  SineOscillatorNode.cpp  SineOscillatorNode.h  SquareOscillatorNode.cpp  SquareOscillatorNode.h  SubSignalNode.cpp  SubSignalNode.h  TriangleOscillatorNode.cpp  TriangleOscillatorNode.h  ValueFloatNode.cpp  ValueFloatNode.h  WriteToWAVNode.cpp  WriteToWAVNode.h
src/AudioEngine/Common/: AudioData.h  AudioLink.h  AudioLinkFactory.h  AudioNode.cpp  AudioNode.h  AudioNodeFactory.h  AudioPin.h  CircularBuffer.h  PlayableAudioNode.h
src/Common/: CMakeLists.txt  Utils.cpp  Utils.h
src/libs/: CMakeLists.txt
src/libs/ImGuiFileDialog-cmake/: CMakeLists.txt
src/libs/glad/: CMakeLists.txt
src/libs/glad/include/glad/: gl.h
src/libs/imgui-cmake/: CMakeLists.txt
src/libs/imgui-node-editor-cmake/: CMakeLists.txt
src/libs/implot-cmake/: CMakeLists.txt
